@@ -775,7 +775,7 @@ parse_and_write_detail_xml_data(const gchar *station_id, xmlNode *root_node, con
 }
 
 /*******************************************************************************/
-gint
+int
 parse_and_write_xml_data(const gchar *station_id, xmlNode *root_node, const gchar *result_file){
     xmlNode     *cur_node = NULL,
                 *child_node = NULL,
@@ -1176,7 +1176,7 @@ parse_and_write_xml_data(const gchar *station_id, xmlNode *root_node, const gcha
                                     /* set begin of day in localtime */
                                     tmp_tm2.tm_year = tm->tm_year;
                                     tmp_tm2.tm_mday = tm->tm_mday; tmp_tm2.tm_mon = tm->tm_mon;  
-                                    tmp_tm2.tm_isdst = 1;
+                                    tmp_tm2.tm_isdst = 0;
                                     fprintf(stderr, "sunrise %li %li %s\n", mktime(&tmp_tm2), mktime(&tmp_tm2), (const char*)temp_xml_string);
                                     t_sunrise = mktime(&tmp_tm2) + localtimezone*3600 -  timezone_my*3600 ;
 //                                    t_sunrise = mktime(&tmp_tm2)  -  timezone_my*3600 + (timezone_my*3600 + 4*3600);
@@ -1194,7 +1194,7 @@ parse_and_write_xml_data(const gchar *station_id, xmlNode *root_node, const gcha
                                     tmp_tm2.tm_year = tm->tm_year;
                                     tmp_tm2.tm_mday = tm->tm_mday; tmp_tm2.tm_mon = tm->tm_mon;  
 
-                                    tmp_tm2.tm_isdst = 1;
+                                    tmp_tm2.tm_isdst = 0;
                                     t_sunset = mktime(&tmp_tm2) + localtimezone*3600 - timezone_my*3600;
 //                                    t_sunset = mktime(&tmp_tm2) - timezone_my*3600 - (timezone_my*3600 + 4*3600);
                                     xmlFree(temp_xml_string);
