@@ -29,8 +29,8 @@
 #include <libxml/parser.h>
 #include <stdlib.h>
 /*******************************************************************************/
-gint get_station_weather_data(const gchar *station_id_with_path, GHashTable *data, gboolean get_detail_data);
-gint parse_xml_data(const gchar *station_id, xmlNode *root_node, GHashTable *data);
-gint parse_xml_detail_data(const gchar *station_id, xmlNode *root_node, GHashTable *data);
+int get_station_weather_data(const gchar *station_id_with_path, GHashTable *data, gboolean get_detail_data);
+int parse_xml_data(const gchar *station_id, xmlNode *root_node, GHashTable *data);
+int parse_xml_detail_data(const gchar *station_id, xmlNode *root_node, GHashTable *data);
 /*******************************************************************************/
 #endif
